--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 attrs==20.3.0
 click==7.1.2
+coverage==5.4
 flask-sqlalchemy==2.4.4
 flask-testing==0.8.1
 flask-wtf==0.14.3
 flask==1.1.2
 gunicorn==20.0.4
 iniconfig==1.1.1
+install==1.3.4
 itsdangerous==1.1.0
 jinja2==2.11.3
 markupsafe==1.1.1
@@ -14,6 +16,7 @@ pluggy==0.13.1
 py==1.10.0
 pymysql==1.0.2
 pyparsing==2.4.7
+pytest-cov==2.11.1
 pytest==6.2.2
 sqlalchemy==1.3.23
 toml==0.10.2
