--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,29 @@
-appdirs==1.4.3
 attrs==20.3.0
-CacheControl==0.12.6
-certifi==2019.11.28
 cffi==1.14.4
-chardet==3.0.4
 click==7.1.2
-colorama==0.4.3
-contextlib2==0.6.0
 coverage==5.4
 cryptography==3.3.1
-distlib==0.3.0
-distro==1.4.0
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
-Flask-Testing==0.8.1
-Flask-WTF==0.14.3
+flask-sqlalchemy==2.4.4
+flask-testing==0.8.1
+flask-wtf==0.14.3
+flask==1.1.2
 gunicorn==20.0.4
-html5lib==1.0.1
-idna==2.8
 iniconfig==1.1.1
 install==1.3.4
-ipaddr==2.2.0
 itsdangerous==1.1.0
-Jinja2==2.11.3
-lockfile==0.12.2
-MarkupSafe==1.1.1
-msgpack==0.6.2
+jinja2==2.11.3
+markupsafe==1.1.1
 packaging==20.9
-pep517==0.8.2
 pluggy==0.13.1
-progress==1.5
 py==1.10.0
 pycparser==2.20
-PyMySQL==1.0.2
+pymysql==1.0.2
 pyparsing==2.4.7
-pytest==6.2.2
 pytest-cov==2.11.1
-pytoml==0.1.21
-requests==2.22.0
-retrying==1.3.3
+pytest==6.2.2
 six==1.15.0
-SQLAlchemy==1.3.23
+sqlalchemy==1.3.23
 toml==0.10.2
-urllib3==1.25.8
-webencodings==0.5.1
-Werkzeug==1.0.1
-WTForms==2.3.3
+werkzeug==1.0.1
+wheel==0.36.2
+wtforms==2.3.3
